update the publication- update the abstract of TATTOO model

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,18 +9,18 @@
 
 @inproceedings{tattoo,
 title={TATTOO: Product Entity Matching as a Topology Construction [submitted]},
-author={{Naeimabadi}, Ali and {Naeem}, Mir Tafseer and Rafiei, Davood},
+author={{Naeimabadi}, Ali and {Nayeem}, Mir Tafseer and Rafiei, Davood},
 booktitle={WSDM},
 month=Mar,
 year={2024},
 preview={tattoo.jpg},
-abstract={here},
+abstract={The domain of Product Entity Matching (PEM)— a subfield of record linkage that focuses on linking records referring to the same product— presents a formidable challenge for various entity matching models. Notably, transformer-based models have demonstrated exceptional performance across numerous datasets; however, their efficacy drops significantly when applied to PEM datasets. This research endeavor is centered upon an investigation of PEM within the common setting wherein information is distributed across both textual and tabular formats. The present study underscores that the incorporation of detailed product tables holds the potential to enhance existing PEM datasets by serving as connections that link associated entities. To facilitate the establishment of such connections among product entities, we reformulate the problem of PEM as a topology construction and introduce two PEM datasets enriched with product detail tables. Our high-performance PEM model named TATTOO relies on the capabilities of pre-trained language models and employs our innovative serialization technique to encode product-specific tabular data. Our proposed model utilizes two independent attribute ranking modules to improve data efficiency and disambiguate hard negative examples. Our experiments on both existing benchmark datasets and our proposed datasets demonstrate significant improvements compared to state-of-the-art methods, including large language models, in zero-shot and few-shot settings. The proposed model also exhibits greater robustness in the face of domain shifts and limited training data compared to well-known benchmark models.},
 }
 
 
 @inproceedings{tatem,
 title={Product Entity Matching via Tabular Data},
-author={{Naeimabadi}, Ali and {Naeem}, Mir Tafseer and Rafiei, Davood},
+author={{Naeimabadi}, Ali and {Nayeem}, Mir Tafseer and Rafiei, Davood},
 booktitle={CIKM},
 month=Oct,
 year={2023},
